get post patch delete

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -28,7 +28,10 @@
         </div>
 
         <div class="row">
-            <div id="update" ></div>
+            
+            <div id="update" class="col-lg-12" style="order: 2;margin-bottom: 50px;">
+            </div>
+            
         </div>
     </div>
     <!-- Optional JavaScript -->
